<resources>
    <string name="app_name">NoteBook</string>
    <string name="zhanghuming">账户名</string>
    <string name="tianjiazhanghuming">添加账户名</string>
    <string name="xuanzezhanghu">选择账户</string>
    <string name="chakanshuju">查看数据</string>
    <string name="bijiaoshuju">比较数据</string>
    <string name="xiugaishuju">修改数据</string>
    <string name="shanchushuju">删除数据</string>
    <string name="tianjaishuju">添加数据</string>
    <string name="dangqiandengluyognhuming">当前登录用户名</string>
    <string name="tianjiabiaoqian">添加标签</string>
    <string name="querentianjia">确认添加</string>
    <string name="qingshuruyaotianjiadeyonghuming">请输入要添加的用户名</string>
    <string name="tianjiaxinyonghu">添加新用户</string>
    <string name="baocunchenggong">保存成功!</string>
    <string name="yonghumingbunengweikong">用户名不能为空!</string>
    <string name="qingshurumima">请输入密码</string>
    <string name="qingshuruzhengquedemima">请输入正确格式的密码!</string>
    <string name="yognhumingyicunzai">用户名已存在!</string>
    <string name="tianjiayonghuxiabiaoqian">添加用户下标签</string>
    <string name="qingshuruyaotianjiadebiaoqianmingcheng">请输入要添加的标签名称</string>
    <string name="gaibiaoqianjiangtianjiadao">该标签将添加到的用户是:</string>
    <string name="qingshurubiaoqianmingcheng">请输入标签名称</string>
    <string name="dangqianbiaoqianyicunzai">当前标签已存在,不能重复添加!</string>
    <string name="qingshurubaocunshuju">请输入要保存的数据:</string>
    <string name="querenbaocun">确认保存</string>
    <string name="qingxuanzeyaochakanderiqi">请选择要查看的日期</string>
    <string name="biaoqianming">标签名:</string>
    <string name="shuzhi">数值:</string>
    <string name="jiluriqi">记录日期:</string>
    <string name="shuzhizongji">数值总计:</string>
    <string name="qingxuanzeyaobijiaoderiqi">请选择要比较的日期</string>
    <string name="kaishibijiao">开始比较</string>
    <string name="jilu1">记录1</string>
    <string name="jilu2">记录2</string>
    <string name="chazhi">差值</string>
    <string name="bijiaoriqibunengweikong">比较日期不能为空!</string>
    <string name="zongchazhi">总差值:\t\t</string>
    <string name="daochushuju">导出数据</string>
    <string name="qingshurubaocunriqi">请输入保存日期:</string>
    <string name="geshi">日期格式:2018-01-01</string>
    <string name="jizhang">记账</string>
    <string name="baobiao">报表</string>
    <string name="my">我的</string>
    <string name="daiban">待办</string>
    <string name="yingkuizongji">盈亏总计</string>
    <string name="ling">000.00</string>
    <string name="shouru">收入</string>
    <string name="zhichu">支出</string>
    <string name="benyueshouru">本月收入</string>
    <string name="benyuezhichu">本月支出</string>
    <string name="shourujiliu">\t\t收入记录</string>
    <string name="zhichujiliu">\t\t支出记录</string>
    <string name="gudingzichan">\t\t固定资产</string>
    <string name="suoshizaji">\t\t琐事杂记</string>
    <string name="beiwanglu">\t\t\t备忘录</string>
    <string name="shujudaochu">\t\t数据导出</string>
    <string name="touzijizhang">\t\t投资记账</string>
    <string name="chakangudingzichan">\t\t查看固定资产</string>
    <string name="jilugudingzichan">\t\t记录固定资产</string>
    <string name="gudingzichanjiluchaxun">\t\t固定资产记录查询</string>
    <string name="daochugudingzichanjilu">\t\t导出固定资产记录</string>
    <string name="gudingzichanjilu">固定资产记录</string>
    <string name="jiluxiangqing">记录详情</string>
    <string name="beizhu">备注:</string>
    <string name="zichanleibie">资产类别:</string>
    <string name="zichanjiazhi">资产价值:</string>
    <string name="zichanbeizhu" >资产备注:</string>
    <string name="quedingyaoshanchugaitiaojilume">确定要删除该条记录么?</string>
    <string name="xiugaijilu">修改记录</string>
    <string name="querenbaocunxiugai">确认保存修改</string>
    <string name="bunenghuifu">保存数据将不能恢复原来的数据,请谨慎操作,您确定要保存修改后的数据么?</string>
    <string name="zuihouxiugairiqi">最后修改日期:</string>
    <string name="xiugaicishu">修改次数</string>
    <string name="xuanzeyiyouzichanleibiejinxingjilu">\t\t选择已有资产类别进行记录</string>
    <string name="tianjiaxindezichanleibiejinxingjilu">\t\t添加新的资产类别进行记录</string>
    <string name="zichanzongji">资产总计:</string>
    <string name="dianjitianjiaxinleibie">\t\t点击添加新类别</string>
    <string name="zichanjilu">资产记录</string>
    <string name="zichanjiluxiangqing">资产记录详情</string>
    <string name="qingshuruzichanleibie">请输入资产类别</string>
    <string name="zichanleibiebunengweikong">资产类别不能为空!</string>
    <string name="gaileibieyicunzai">当前记录日期下的该资产类别已有记录,是否需要修改原来的记录?修改后原数据将不能恢复,请谨慎操作!!</string>
    <string name="zichanjiazhibunengweikong">资产价值不能为空!</string>
    <string name="qingshuruzichanjiazhi">请输入资产价值</string>
    <string name="qingshurujiluriqi">请输入记录日期,默认为系统日期,格式2018-01-01</string>
    <string name="qingshuruzichanbeizhu">请输入资产备注</string>
    <string name="zichanchaxun">资产查询</string>
    <string name="anzhaojiluriqichaxun">\t\t按照记录日期查询</string>
    <string name="anzhaozichanleibiejinxingchaxun">\t\t按照资产类别进行查询</string>
    <string name="anzhaobeizhujinxingmohuchaxun">\t\t按照备注进行模糊查询</string>
    <string name="duibigudingzichanjilu" >\t\t对比固定资产记录</string>
    <string name="zichanchaxunxiangqing">资产查询详情</string>
    <string name="qingshuruyaochaxunderiqi">请输入要查询的日期,日期格式:2018-01-01</string>
    <string name="riqishengxu">日期升序</string>
    <string name="riqijiangxu">日期降序</string>
    <string name="chaxun">查询</string>
    <string name="qingshuruyaochaxundeleibie">请输入要查询的类别</string>
    <string name="qingshuruyaochaxundebeizhu">请输入要查询的备注</string>
    <string name="qingshuruzhengquederiqigesi">请输入正确的日期格式,例:2018-01-01</string>
    <string name="meiyouchaxunshuju">没有查询数据!</string>
    <string name="shanchuchenggong">删除成功!</string>
    <string name="gudingzichanjiluduibi">固定资产记录对比</string>
    <string name="chakantouzijilu">\t\t查看投资记录\t\t</string>
    <string name="tianjiatouzijilu">\t\t添加投资记录\t\t</string>
    <string name="touzijiluchaxun">\t\t投资记录查询</string>
    <string name="touzihuikuanjilu">\t\t投资回款记录</string>
    <string name="daochutouzijilushuju">\t\t导出投资记录数据</string>
    <string name="tianjiaxindetouzipingtaijinxingjilu">\t\t添加新的投资平台进行记录</string>
    <string name="dainjitianjiaxinpingtai">\t\t点击添加新平台</string>
    <string name="xuanzeyiyoupingtaijinxingjilu">\t\t选择已有平台进行记录</string>
    <string name="tianjiatouzijiluxiangqing">添加投资记录详情</string>
    <string name="touzipingtai">投资平台</string>
    <string name="touzijine">投资金额</string>
    <string name="touziriqi">投资日期</string>
    <string name="touzibeizhu">投资备注</string>
    <string name="huikuanshijian">回款时间</string>
    <string name="huikuanriqi">回款日期</string>
    <string name="qingshuruhuikuanriqi">请输入回款日期,格式2018-01-01,回款日期必须填写</string>
    <string name="qingshurutouziriqi">请输入投资日期,格式2018-01-01,投资日期必须填写</string>
    <string name="qingshurutouzipingtai">请输入投资平台名称,投资平台必须填写</string>
    <string name="qingshurutouzibeizhu">请输入投资备注</string>
    <string name="huikuanjine">回款金额</string>
    <string name="qingshuruhuilkuanjine">请输入回款金额</string>
    <string name="touzizhanghao">投资账号</string>
    <string name="qingshurutouzizhanghao">请输入投资账号</string>
    <string name="tongjibiaoshi">统计标识</string>
    <string name="qingshurutongjibiaoshi">请输入统计标识,有效或无效,默认有效</string>
    <string name="shifoudaoqi">是否到期</string>
    <string name="qingshurushifoudaoqi">请输入是否到期</string>
    <string name="gudingnianhuashouyi">固定年化收益(%)</string>
    <string name="qingshurugudingnianhuashouyi">请输入固定年化收益</string>
    <string name="ewaishouyi">额外收益(元)</string>
    <string name="qingshuruewaishouyi">请输入返现,红包,代金券等额外收益的总额</string>
    <string name="ewainianhuashouyilv">额外年化收益率(%)</string>
    <string name="qingshuruewainianhuashouyilv">请输入额外年化收益率</string>
    <string name="touzitianshu">投资天数</string>
    <string name="qingshurutouzitianshu">请输入投资天数,用于计算额外年化收益</string>
    <string name="zongnianhuashouyi">总年化收益(%)</string>
    <string name="qingshuruzongnianhuashouyi">请输入总年化收益</string>
    <string name="ling1">0</string>
    <string name="touziguanlianshoujihao">投资手机号</string>
    <string name="qingshurutouziguanlianshoujihao">请输入投资关联手机号</string>
    <string name="zongshouyi">总收益(元)</string>
    <string name="qingshuruzongshouyi">请输入总收益</string>
    <string name="weidaoqi">未到期</string>
    <string name="dangqianjilupingtai">当前记录投资平台,在当前记录日期下已有记录,保存将覆盖原来的数据,数据不可恢复,请谨慎操作!!</string>
    <string name="qingshuruzhengquedetouziriqi">请输入正确的投资日期,格式:2018-01-01</string>
    <string name="qingshuruzhengquedehuikuanriqi">请输入正确的回款日期,格式:2018-01-01</string>
    <string name="genjutouziriqichakan">\t\t根据投资日期查看</string>
    <string name="genjuhuikuanriqichaxun">\t\t根据回款日期查看</string>
    <string name="genjutouzipingtaichakan">\t\t根据投资平台查看</string>
    <string name="qingshurutouzijine">请输入投资金额,投资金额必须填写!</string>
    <string name="touzijiluliebiao">投资记录列表</string>
    <string name="touzijiluxiangqing">投资记录详情</string>
    <string name="tongjiyouxiao">统计有效</string>
    <string name="tongjiwuxiao">统计无效</string>
    <string name="qxjc">权限检查</string>
    <string name="queding">确定</string>
    <string name="weishouyuduqutonghuajiluquanxian">未授予读取通话记录权限!</string>
    <string name="daorugudingzichanjilu">\t\t导入固定资产记录</string>
    <string name="expenditure">支出</string>
    <string name="chakanzhichujilu">\t\t查看支出记录</string>
    <string name="tianjaizhichujilu">\t\t添加支出记录</string>
    <string name="beifenzhichujilu">\t\t备份支出记录</string>
    <string name="zhichujilutongji">\t\t支出记录统计</string>
    <string name="tianjiazhichujilu">添加支出记录</string>
    <string name="zhichumingcheng">支出名称:</string>
    <string name="qingshuruzhichumingcheng">请输入支出名称</string>
    <string name="zhichujine">支出金额:</string>
    <string name="qingshuruzhichujine">请输入支出金额</string>
    <string name="zhichushijian">支出时间:</string>
    <string name="riqigeshi" >日期格式:2018-01-01</string>
    <string name="qingshurubeizhu">请输入备注</string>
    <string name="baocunzhichujilu">保存支出记录</string>
    <string name="riqigeshicuowu">日期输入格式错误,正确的格式为:\n2018-01-01</string>
    <string name="chakanzhichujilu0">查看支出记录</string>
    <string name="shangyiyue">上一月</string>
    <string name="xiayiyue">下一月</string>
    <string name="yijingshizuihouyigeyuela">已经是最后一个月啦!</string>
    <string name="zaicitianjia">再次添加</string>
    <string name="shanchushibai">删除失败!</string>
    <string name="bianjizhichujilu">编辑支出记录</string>
    <string name="jixubianji">继续编辑</string>
    <string name="xiugaizhichujilu">修改支出记录</string>
    <string name="gengxingaijilu">更新该记录</string>
    <string name="shanchugaijilu">删除该记录</string>
    <string name="qingxuanzexuyaodecaozuo">请选择需要的操作</string>
    <string name="qingshuruzhichuleixing">请输入支出类型</string>
    <string name="zhichuleixing">支出类型</string>
    <string name="chakanshourujilu">\t\t查看收入记录</string>
    <string name="tianjiashourujilu">\t\t添加收入记录</string>
    <string name="shourujilutongji">\t\t收入记录统计</string>
    <string name="beifenshourujilu">\t\t备份收入记录</string>
    <string name="tianjiashourujilu1">添加收入记录</string>
    <string name="shourumingcheng">收入名称</string>
    <string name="qingshurushourumingcheng">请输入收入名称</string>
    <string name="shourujine">收入金额</string>
    <string name="qingshurushourujine">请输入收入金额</string>
    <string name="shouruleixing">收入类型</string>
    <string name="qingshurushouruleixing">请输入收入类型</string>
    <string name="shourushijian">收入时间</string>
    <string name="baocunshourujilu">保存收入记录</string>
    <string name="xiugaishourujilu">修改收入记录</string>
    <string name="bianjishourujilu">编辑收入记录</string>
    <string name="chakanshourujilu0">查看收入记录</string>
    <string name="ceshiyemian">测试页面</string>
    <string name="ceshianniu">测试按钮</string>
    <string name="shouzhiyuedutongji">\t\t收支月度统计</string>
    <string name="shouzhiniandutongji">\t\t收支年度统计</string>
    <string name="gudingzichantongji">\t\t固定资产统计</string>
    <string name="touziyingshouyuedutongji">\t\t投资盈收月度统计</string>
    <string name="touziyingshouniandutongji">\t\t投资盈收年度统计</string>
    <string name="beiwanglu1">备忘录</string>
    <string name="chakanbeiwanglu">\t\t查看备忘录</string>
    <string name="tianjiabeiwanglu">\t\t添加备忘录</string>
    <string name="beifenbeiwanglu">\t\t备份备忘录</string>
    <string name="xiaomaomi">\t\t小小小猫咪</string>
</resources>