<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kimonic.utilsmodule.ui.MTopBarView
        android:id="@+id/mtb_act_income"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorQianLan"
        app:centerText="@string/shouru"
        app:leftImage="@drawable/xvector_back" />

    <TextView
        android:id="@+id/tv_act_income_chakanshourujilu"
        style="@style/IncomeAct_tvstyle"
        android:drawableStart="@drawable/xshape_redcircle"
        android:text="@string/chakanshourujilu" />

    <TextView
        android:id="@+id/tv_act_income_tianjaishourujilu"
        style="@style/IncomeAct_tvstyle"
        android:drawableStart="@drawable/xshape_cyancircle"
        android:text="@string/tianjiashourujilu" />

    <TextView
        android:id="@+id/tv_act_income_shourujilutongji"
        style="@style/IncomeAct_tvstyle"
        android:drawableStart="@drawable/xshape_erniucircle"
        android:text="@string/shourujilutongji" />

    <TextView
        android:id="@+id/tv_act_income_beifenshourujilu"
        style="@style/IncomeAct_tvstyle"
        android:drawableStart="@drawable/xshape_bluecircle"
        android:text="@string/beifenshourujilu" />

</LinearLayout>