<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kimonic.utilsmodule.ui.MTopBarView
        android:id="@+id/mtb_act_memorandum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorQianLan"
        app:centerText="@string/beiwanglu1"
        app:leftImage="@drawable/xvector_back" />

    <TextView
        android:id="@+id/tv_act_memorandum_chakanbeiwanglu"
        style="@style/MemorandumAct_tvstyle"
        android:drawableStart="@drawable/xshape_redcircle"
        android:text="@string/chakanbeiwanglu" />

    <TextView
        android:id="@+id/tv_act_memorandum_tianjiabeiwanglu"
        style="@style/MemorandumAct_tvstyle"
        android:drawableStart="@drawable/xshape_cyancircle"
        android:text="@string/tianjiabeiwanglu" />

    <TextView
        android:id="@+id/tv_act_memorandum_beifenbeiwanglu"
        style="@style/MemorandumAct_tvstyle"
        android:drawableStart="@drawable/xshape_erniucircle"
        android:text="@string/beifenbeiwanglu" />

    <TextView
        android:id="@+id/tv_act_memorandum_cunchumulu"
        style="@style/MemorandumAct_tvstyle"
        android:drawableStart="@drawable/xshape_bluecircle"
        android:text="@string/xiaomaomi" />


</LinearLayout>